<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/board_detail_menu_board_name"
        android:title="Board name"/>
    <item
        android:id="@+id/board_detail_menu_desc"
        android:title="Board description" />
    <item
        android:id="@+id/board_detail_menu_invite"
        android:title="Invite member" />
    <item android:title="Visibility"
        android:id="@+id/board_detail_menu_visibility"
        android:visible="false"
        >
        <menu>
            <item
                android:id="@+id/board_detail_menu_private"
                android:icon="@drawable/vd_invisible"
                android:title="Private" />
            <item
                android:id="@+id/board_detail_menu_public"
                android:icon="@drawable/vd_tick"
                android:title="Public" />
        </menu>
    </item>
    <item
        android:id="@+id/board_detail_menu_background"
        android:title="Change background" />
    <item
        android:id="@+id/board_detail_menu_activity"
        android:title="Activities" />
    <item
        android:id="@+id/board_detail_menu_archived_cards"
        android:title="Archived cards" />
    <item
        android:id="@+id/board_detail_menu_leave"
        android:title="Leave board"
        android:visible="false" />
    <item android:title="Dashboard"
        android:id="@+id/board_detail_menu_dashboard"
        />
    <item
        android:id="@+id/board_detail_menu_close"
        android:title="Close board"
        android:visible="false" />
</menu>