<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include android:id="@+id/create_board_dialog_toolbar"
                layout="@layout/two_action_toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_board_dialog_toolbar"
                android:layout_width="match_parent"
                android:id="@+id/create_board_dialog_image"
                android:src="@drawable/vd_create_board"
                android:layout_height="wrap_content"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_board_dialog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_board_dialog_image"
                android:drawableStart="@drawable/vd_note_text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_12"
                android:drawablePadding="@dimen/dimen_8"
                android:digits="1234567890 qwertzuiopasdfghjklyxcvbnm"
                android:hint="Name of the board"
                android:textSize="@dimen/text_size_16"
                android:singleLine="true"
                android:fontFamily="@font/poppins"
                android:background="@color/neutrals9"
                android:layout_marginTop="@dimen/dimen_16"
                />
            <LinearLayout
                android:layout_marginTop="@dimen/dimen_4"
                android:id="@+id/create_board_dialog_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neutrals9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_board_dialog_name"
                android:orientation="vertical"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/create_board_dialog_visibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableStart="@drawable/vd_tag"
                    android:maxLines="1"
                    android:focusable="false"
                    android:paddingHorizontal="@dimen/dimen_12"
                    android:paddingVertical="@dimen/dimen_12"
                    android:drawablePadding="@dimen/dimen_8"
                    android:inputType="none"
                    android:background="@android:color/transparent"
                    android:text="Visibility"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/poppins"
                    app:layout_constraintTop_toBottomOf="@id/add_workspace_fragment_image"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/create_board_dialog_private"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableStart="@drawable/vd_circle_default"
                    android:maxLines="1"
                    android:focusable="false"
                    android:paddingHorizontal="@dimen/dimen_48"
                    android:paddingVertical="@dimen/dimen_12"
                    android:drawablePadding="@dimen/dimen_8"
                    android:inputType="none"
                    android:background="@android:color/transparent"
                    android:text="Private"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/poppins"
                    app:layout_constraintTop_toBottomOf="@id/add_workspace_fragment_image"
                    />
<!--                <com.google.android.material.textview.MaterialTextView-->
<!--                    android:id="@+id/create_board_dialog_workspace"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    android:drawableStart="@drawable/vd_circle_default"-->
<!--                    android:maxLines="1"-->
<!--                    android:focusable="false"-->
<!--                    android:paddingHorizontal="@dimen/dimen_48"-->
<!--                    android:paddingVertical="@dimen/dimen_12"-->
<!--                    android:drawablePadding="@dimen/dimen_8"-->
<!--                    android:inputType="none"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:text="Workspace"-->
<!--                    android:textSize="@dimen/text_size_16"-->
<!--                    android:fontFamily="@font/poppins"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/add_workspace_fragment_image"-->
<!--                    />-->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/create_board_dialog_public"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableStart="@drawable/vd_circle_default"
                    android:maxLines="1"
                    android:focusable="false"
                    android:paddingHorizontal="@dimen/dimen_48"
                    android:paddingVertical="@dimen/dimen_12"
                    android:drawablePadding="@dimen/dimen_8"
                    android:inputType="none"
                    android:background="@android:color/transparent"
                    android:text="Public"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/poppins"
                    app:layout_constraintTop_toBottomOf="@id/add_workspace_fragment_image"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/create_board_dialog_array_down"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginEnd="@dimen/dimen_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/create_board_dialog_container"
                android:src="@drawable/vd_arrow_down"

                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/create_board_dialog_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_board_dialog_container"
                android:drawableStart="@drawable/vd_tag"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingHorizontal="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_12"
                android:drawablePadding="@dimen/dimen_8"
                android:text="Background"
                android:textSize="@dimen/text_size_16"
                android:singleLine="true"
                android:fontFamily="@font/poppins"
                android:background="@color/neutrals9"
                android:layout_marginTop="@dimen/dimen_4"
                />
            <FrameLayout
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/dimen_8"
                app:layout_constraintTop_toTopOf="@id/create_board_dialog_background"
                android:layout_width="wrap_content"
                android:background="@color/neutrals9"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/create_board_dialog_select_image"
                    android:focusable="false"
                    android:clickable="false"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:layout_marginEnd="@dimen/dimen_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"

                    android:src="@drawable/ic_round_image_search_24"
                    />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/neutrals9"
                android:paddingHorizontal="@dimen/dimen_8"
                android:id="@+id/create_board_dialog_recycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_board_dialog_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>