...
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxBackgroundColor="#F1EEFB"
            app:endIconDrawable="@drawable/outline_search_24"
            app:endIconContentDescription="search icon"
            app:endIconMode="custom"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/home_fragment_search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="Search board"
                android:textColorHint="@color/highlightStrokeColor"
...
